test/classes/initializers/phase1/nested-function-mods-field1.good
nested-function-mods-field1.chpl:6: In initializer:
nested-function-mods-field1.chpl:8: error: multiple initializations of field "field"
